# CALS_BACKEND

./: pyproject.toml  requirements.txt
config/: settings.py
diets/: admin.py  models.py  serializers.py  urls.py  views.py
diets/migrations/: 0001_initial.py  0002_initial.py  0003_quantitymultiple_multipled_food_calorie_and_more.py  0004_alter_quantitymultiple_food_quantity.py  0005_alter_quantitymultiple_multipled_food_calorie_and_more.py  0006_alter_quantitymultiple_multipled_food_calorie_and_more.py  0007_remove_quantitymultiple_multipled_food_calorie_and_more.py  0008_remove_dietlist_created_time_and_more.py  0009_alter_dietlist_meal_category.py  0010_alter_selecteddiet_food_name.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
